--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
+    "@tailwindcss/forms": "^0.5.9",
     "font-awesome": "^4.7.0",
     "sirv-cli": "^2.0.0",
     "svelte": "3.59.2",
